Chore/sonarqube vulnerabilites (#112)
* chore: use consistent casing for resources

* fix: remove double constructor declarations

* chore: missing tolist change

* refactor: map errors to custom exceptions

* fix: fix failing tests to handle custom exceptions

* chore: format code